force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>This is an HL Contract object. Stores information from Engagement or Opportunity and integrates with Oracle Contract object.</description>
    <label>Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>