force-app/main/default/objects/Contract__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company to create a bill to</description>
    <inlineHelpText>Please select a company to send a bill to. For an ICO contract, this is the project owning legal entity.</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract (Account)</relationshipLabel>
    <relationshipName>Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>