force-app/main/default/objects/Contract__c/fields/Bill_To_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Billing_City__c</fullName>
    <formula>Bill_To__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Billing City</label>
    <type>Text</type>
</CustomField>