force-app/main/default/objects/Contract__c/fields/Bill_To_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Billing_Country__c</fullName>
    <formula>Bill_To__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Billing Country</label>
    <type>Text</type>
</CustomField>