force-app/main/default/objects/Contract__c/fields/Bill_To_Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Billing_Country_Code__c</fullName>
    <formula>TEXT(Bill_To__r.BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Billing Country Code</label>
    <type>Text</type>
</CustomField>