force-app/main/default/objects/Contract__c/fields/Bill_To_Billing_County__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Billing_County__c</fullName>
    <formula>Bill_To__r.Billing_County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Billing County</label>
    <type>Text</type>
</CustomField>