force-app/main/default/objects/Contract__c/fields/Bill_To_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Billing_State__c</fullName>
    <formula>Bill_To__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Billing State</label>
    <type>Text</type>
</CustomField>