force-app/main/default/objects/Contract__c/fields/Bill_To_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_DUNS_Number__c</fullName>
    <formula>Bill_To__r.DUNS_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To DUNS Number</label>
    <type>Text</type>
</CustomField>