force-app/main/default/objects/Contract__c/fields/Bill_To_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Parent_Id__c</fullName>
    <formula>Bill_To__r.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Parent Id</label>
    <type>Text</type>
</CustomField>