force-app/main/default/objects/Contract__c/fields/Bill_To_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Shipping_City__c</fullName>
    <formula>Bill_To__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Shipping City</label>
    <type>Text</type>
</CustomField>