force-app/main/default/objects/Contract__c/fields/Bill_To_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Shipping_Country__c</fullName>
    <formula>Bill_To__r.ShippingCountry</formula>
    <label>Bill To Shipping Country</label>
    <type>Text</type>
</CustomField>