force-app/main/default/objects/Contract__c/fields/Bill_To_Shipping_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Shipping_Country_Code__c</fullName>
    <formula>TEXT(Bill_To__r.ShippingCountryCode)</formula>
    <label>Bill To Shipping Country Code</label>
    <type>Text</type>
</CustomField>