force-app/main/default/objects/Contract__c/fields/Bill_To_Shipping_Province__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Shipping_Province__c</fullName>
    <formula>Bill_To__r.Shipping_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Shipping Province</label>
    <type>Text</type>
</CustomField>