force-app/main/default/objects/Contract__c/fields/Bill_To_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Shipping_Street__c</fullName>
    <formula>Bill_To__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Shipping Street</label>
    <type>Text</type>
</CustomField>