force-app/main/default/objects/Contract__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a contact related to the &apos;Bill To&apos; company.</inlineHelpText>
    <label>Billing Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please select a Billing Contact that is a contact of the &apos;Bill To&apos; company.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_To__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contract</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>