force-app/main/default/objects/Contract__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <formula>Billing_Contact__r.Email</formula>
    <label>Billing Contact Email</label>
    <type>Text</type>
</CustomField>