force-app/main/default/objects/Contract__c/fields/Billing_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_First_Name__c</fullName>
    <formula>Billing_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact First Name</label>
    <type>Text</type>
</CustomField>