force-app/main/default/objects/Contract__c/fields/Billing_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Last_Name__c</fullName>
    <formula>Billing_Contact__r.LastName</formula>
    <label>Billing Contact Last Name</label>
    <type>Text</type>
</CustomField>