force-app/main/default/objects/Contract__c/fields/Client_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Text__c</fullName>
    <formula>left (Client__r.Name,35)</formula>
    <label>Client Name Text</label>
    <type>Text</type>
</CustomField>