force-app/main/default/objects/Contract__c/fields/Contract_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Contract Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>