force-app/main/default/objects/Contract__c/fields/Engagement_Currency__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Currency__c</fullName>
    <formula>TEXT(Engagement__r.CurrencyIsoCode)</formula>
    <label>Engagement Currency</label>
    <type>Text</type>
</CustomField>