force-app/main/default/objects/Contract__c/fields/ERP_Bill_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_Plan_Name__c</fullName>
    <description>Name of the bill plan

Maps to /createContract/contractHeader/BillPlan/BillPlanName</description>
    <label>ERP Bill Plan Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill Plan</fullName>
                <default>true</default>
                <label>Bill Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>