force-app/main/default/objects/Contract__c/fields/ERP_Bill_Set__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_Set__c</fullName>
    <description>The bill set in ERP</description>
    <label>ERP Bill Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>