force-app/main/default/objects/Contract__c/fields/ERP_Bill_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_To_Account_Number__c</fullName>
    <description>Client Number

Maps to /createContract/contractHeader/BillToAccountNumber/SoldToAccountNumber; /createContract/contractHeader/BillPlan/BillToAccountNumber</description>
    <formula>Bill_To__r.Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Bill To Account Number</label>
    <type>Text</type>
</CustomField>