force-app/main/default/objects/Contract__c/fields/ERP_Bill_To_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_To_Address_ID__c</fullName>
    <formula>Bill_To__r.ERP_Bill_To_Address_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Bill To Address ID</label>
    <type>Text</type>
</CustomField>