force-app/main/default/objects/Contract__c/fields/ERP_Bill_To_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_To_Contact_Id__c</fullName>
    <description>Billing Contact of the engagement

Maps to /createContract/contractHeader/BillPlan/BillToContactId</description>
    <formula>Bill_To__r.ERP_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please specify the ERP contact Id of the billing contact</inlineHelpText>
    <label>ERP Bill To Contact Id</label>
    <type>Text</type>
</CustomField>