force-app/main/default/objects/Contract__c/fields/ERP_Bill_Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>ERP_Bill_Transaction_Currency__c</fullName>
    <description>The transaction currency for the invoice in ERP</description>
    <label>ERP Bill Transaction Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>