force-app/main/default/objects/Contract__c/fields/ERP_Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_Cycle__c</fullName>
    <description>Billing Cycle in the invoice information in the bill plan.

Maps to /createContract/contractHeader/BillPlan/BillingCycle</description>
    <inlineHelpText>Please specify Immediate</inlineHelpText>
    <label>ERP Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>