force-app/main/default/objects/Contract__c/fields/ERP_Billing_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_Transaction_Type__c</fullName>
    <description>Transaction Type under Billing</description>
    <inlineHelpText>Please select PA Invoice for a customer contract, and PA Internal Invoice for an ICO contract</inlineHelpText>
    <label>ERP Billing Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PA Invoice</fullName>
                <default>true</default>
                <label>PA Invoice</label>
            </value>
            <value>
                <fullName>PA Internal Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>