force-app/main/default/objects/Contract__c/fields/ERP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit__c</fullName>
    <description>Business Unit in ERP

Maps to /createContract/contractHeader/OrgName/OwningOrgName</description>
    <inlineHelpText>Please select a business unit of this contract</inlineHelpText>
    <label>ERP Business Unit</label>
    <length>64</length>
    <type>Text</type>
</CustomField>