force-app/main/default/objects/Contract__c/fields/ERP_Business_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit_Id__c</fullName>
    <description>Id of the organization (business unit) in ERP

Maps to /createContract/contractHeader/OrgId</description>
    <inlineHelpText>Please specify the id of the business unit of the project owning entity in ERP</inlineHelpText>
    <label>ERP Business Unit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>