force-app/main/default/objects/Contract__c/fields/ERP_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contract_Number__c</fullName>
    <formula>Contract_Number__c</formula>
    <label>ERP Contract Number</label>
    <type>Text</type>
</CustomField>