force-app/main/default/objects/Contract__c/fields/ERP_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contract_Type__c</fullName>
    <description>Contract Type for Oracle

Maps to /createContract/contractHeader/ContractTypeName</description>
    <inlineHelpText>Please select Engagement for a customer contract, or ICO for an intercompany ontract</inlineHelpText>
    <label>ERP Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engagement</fullName>
                <default>true</default>
                <label>Engagement</label>
            </value>
            <value>
                <fullName>ICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>