force-app/main/default/objects/Contract__c/fields/ERP_Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contract_Version__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>ERP Contract Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>