force-app/main/default/objects/Contract__c/fields/ERP_Conversion_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Conversion_Rate_Type__c</fullName>
    <description>The currency conversion type in ERP</description>
    <label>ERP Conversion Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Exchange Rate</fullName>
                <default>true</default>
                <label>Corporate Exchange Rate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>