force-app/main/default/objects/Contract__c/fields/ERP_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if this should sync to ERP</description>
    <inlineHelpText>Indicate if this should sync to ERP</inlineHelpText>
    <label>ERP Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>