force-app/main/default/objects/Contract__c/fields/ERP_Event_Format__c.field-meta.xml
<CustomField>
    <fullName>ERP_Event_Format__c</fullName>
    <description>The event format in ERP</description>
    <label>ERP Event Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HL Event</fullName>
                <default>true</default>
                <label>HL Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>