force-app/main/default/objects/Contract__c/fields/ERP_Expenditure_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Expenditure_Business_Unit__c</fullName>
    <description>The business unit of the provider business unit

Maps to /mergeContract/contractHeader/ContractLine/ProjectContractLineInternalAttributes/OrganizationName</description>
    <inlineHelpText>For an ICO contract, please specify the business unit of the bill to legal entity.</inlineHelpText>
    <label>ERP Expenditure Business Unit</label>
    <length>64</length>
    <type>Text</type>
</CustomField>