force-app/main/default/objects/Contract__c/fields/ERP_Expenditure_Organization__c.field-meta.xml
<CustomField>
    <fullName>ERP_Expenditure_Organization__c</fullName>
    <label>ERP Expenditure Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>