force-app/main/default/objects/Contract__c/fields/ERP_Expenditure_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Expenditure_Type_Name__c</fullName>
    <defaultValue>&apos;65540-Other Seminars&apos;</defaultValue>
    <description>This is required for an ICO contract

Maps to /mergeContract/contractHeader/ContractLine/ProjectContractLineInternalAttributes/ExpenditureTypeName</description>
    <inlineHelpText>Please specify an expenditure type, available in ERP.</inlineHelpText>
    <label>ERP Expenditure Type Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>