force-app/main/default/objects/Contract__c/fields/ERP_Expense_Cap__c.field-meta.xml
<CustomField>
    <fullName>ERP_Expense_Cap__c</fullName>
    <description>The soft limit in ERP</description>
    <label>ERP Expense Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>