force-app/main/default/objects/Contract__c/fields/ERP_Job_Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ERP_Job_Rate_Schedule__c</fullName>
    <formula>TEXT (CurrencyIsoCode) + &quot; - Job Rate Schedule&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Job Rate Schedule</label>
    <type>Text</type>
</CustomField>