force-app/main/default/objects/Contract__c/fields/ERP_Labor_Format__c.field-meta.xml
<CustomField>
    <fullName>ERP_Labor_Format__c</fullName>
    <description>The labor format in ERP</description>
    <label>ERP Labor Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HL Labor</fullName>
                <default>true</default>
                <label>HL Labor</label>
            </value>
            <value>
                <fullName>ICO LABOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>