force-app/main/default/objects/Contract__c/fields/ERP_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legal_Entity__c</fullName>
    <description>Legal entity name in ERP

Maps to /createContract/contractHeader/LegalEntityName</description>
    <inlineHelpText>Please select a legal entity for this contract. This is the legal entity that will create an invoice.</inlineHelpText>
    <label>ERP Legal Entity Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>