force-app/main/default/objects/Contract__c/fields/ERP_Legal_Entity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legal_Entity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Contract</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>