force-app/main/default/objects/Contract__c/fields/ERP_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Description__c</fullName>
    <description>The line description in ERP</description>
    <label>ERP Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>