force-app/main/default/objects/Contract__c/fields/ERP_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Name__c</fullName>
    <description>The line name in ERP</description>
    <label>ERP Line Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line 1</fullName>
                <default>true</default>
                <label>Line 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>