force-app/main/default/objects/Contract__c/fields/ERP_Line_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Start_Date__c</fullName>
    <description>The line start date in ERP</description>
    <formula>Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Line Start Date</label>
    <type>Date</type>
</CustomField>