force-app/main/default/objects/Contract__c/fields/ERP_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Status__c</fullName>
    <description>The line status in ERP</description>
    <label>ERP Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>