force-app/main/default/objects/Contract__c/fields/ERP_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Type__c</fullName>
    <description>The line type in ERP</description>
    <label>ERP Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free-form, project</fullName>
                <default>true</default>
                <label>Free-form, project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>