force-app/main/default/objects/Contract__c/fields/ERP_Non_Job_Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ERP_Non_Job_Rate_Schedule__c</fullName>
    <formula>TEXT(CurrencyIsoCode) + &quot; - Non-Labor Schedule&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Non Job Rate Schedule</label>
    <type>Text</type>
</CustomField>