force-app/main/default/objects/Contract__c/fields/ERP_Non_labor_Format__c.field-meta.xml
<CustomField>
    <fullName>ERP_Non_labor_Format__c</fullName>
    <description>The non labor format in ERP</description>
    <label>ERP Non-labor Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HL Nonlabor</fullName>
                <default>true</default>
                <label>HL Nonlabor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>