force-app/main/default/objects/Contract__c/fields/ERP_Organization__c.field-meta.xml
<CustomField>
    <fullName>ERP_Organization__c</fullName>
    <formula>ERP_Legal_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Organization</label>
    <type>Text</type>
</CustomField>