force-app/main/default/objects/Contract__c/fields/ERP_Original_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Original_Project_Number__c</fullName>
    <description>Stores the original Opportunity Project Number or Engagement Project Number when the contract was created.</description>
    <inlineHelpText>Stores the original Opportunity Project Number or Engagement Project Number when the contract was created.</inlineHelpText>
    <label>ERP Original Project Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>