force-app/main/default/objects/Contract__c/fields/ERP_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ERP_Payment_Terms__c</fullName>
    <description>Payment terms in the customer information in the bill plan</description>
    <label>ERP Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMMEDIATE</fullName>
            </value>
            <value>
                <fullName>30 Net</fullName>
                <default>true</default>
                <label>30 Net</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>