force-app/main/default/objects/Contract__c/fields/ERP_Person_Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ERP_Person_Rate_Schedule__c</fullName>
    <formula>TEXT(CurrencyIsoCode) + &quot; - Person Rate Schedule&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Person Rate Schedule</label>
    <type>Text</type>
</CustomField>