force-app/main/default/objects/Contract__c/fields/ERP_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Id__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Engagement__c)),
NOT(ISBLANK(Engagement__c))),
Engagement__r.ERP_ID__c,
Opportunity__r.ERP_ID__c)</formula>
    <label>ERP Project Id</label>
    <type>Text</type>
</CustomField>