force-app/main/default/objects/Contract__c/fields/ERP_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Number__c</fullName>
    <description>ERP Project Number is determined from the Opportunity (for data conversion)  or from ERP_Original_Project_Number__c (populated from</description>
    <formula>Opportunity__r.ERP_Project_Number__c</formula>
    <label>ERP Project Number</label>
    <type>Text</type>
</CustomField>