force-app/main/default/objects/Contract__c/fields/ERP_Provider_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Provider_Business_Unit__c</fullName>
    <description>This is the business unit of the resource.</description>
    <label>ERP Provider Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>