force-app/main/default/objects/Contract__c/fields/ERP_Receiver_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Receiver_Business_Unit__c</fullName>
    <label>ERP Receiver Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>