force-app/main/default/objects/Contract__c/fields/ERP_Revenue_Method__c.field-meta.xml
<CustomField>
    <fullName>ERP_Revenue_Method__c</fullName>
    <description>The revenue method in ERP</description>
    <label>ERP Revenue Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Billed Revenue</fullName>
                <default>true</default>
                <label>As Billed Revenue</label>
            </value>
            <value>
                <fullName>Amount Based Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>