force-app/main/default/objects/Contract__c/fields/ERP_Revenue_Plan__c.field-meta.xml
<CustomField>
    <fullName>ERP_Revenue_Plan__c</fullName>
    <description>The revenue plan in ERP</description>
    <label>ERP Revenue Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Plan</fullName>
                <default>true</default>
                <label>Revenue Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>